contact-functions.yaml
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: contact-functions
spec:
  template:
    spec:
      containers:
        - name: service1
          image: kettil/contact-functions-service
          ports:
            - containerPort: 8002
