ext-authz.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-authz-grpc-local
spec:
  hosts:
    - "external-authz-grpc.local" # The service name to be used in the extension provider in the mesh config.
  endpoints:
    - address: "127.0.0.1"
  ports:
    - name: grpc
      number: 9191 # The port number to be used in the extension provider in the mesh config.
      protocol: GRPC
  resolution: STATIC
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ext-authz
spec:
  selector:
    matchLabels:
      app: httpbin
  action: CUSTOM
  provider:
    # The provider name must match the extension provider defined in the mesh config.
    # You can also replace this with sample-ext-authz-http to test the other external authorizer definition.
    name: sample-ext-authz-grpc
  rules:
    # The rules specify when to trigger the external authorizer.
    - to:
        - operation:
            paths: ["/headers"]
