generated-envoy-config.yml
---
static_resources:
  listeners:
  - address:
      socket_address:
        address: "0.0.0.0"
        port_value: 18000
    filter_chains:
    - filters:
      - name: "envoy.filters.network.http_connection_manager"
        typed_config:
          '@type': "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
          codec_type: "auto"
          stat_prefix: "ingress_http"
          http_filters:
          - name: "envoy.ext_authz1"
            typed_config:
              '@type': "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz"
              transport_api_version: "V3"
              grpc_service:
                envoy_grpc:
                  cluster_name: "ext-authz"
                timeout: "1s"
              include_peer_certificate: true
              with_request_body:
                max_request_bytes: 65536
                allow_partial_message: false
                pack_as_bytes: false
          - name: "envoy.filters.http.router"
            typed_config: {}
          route_config:
            name: "local_route"
            virtual_hosts:
            - name: "backend"
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/acl/"
                route:
                  cluster: "acl_api"
                typed_per_filter_config:
                  envoy.filters.http.ext_authz:
                    '@type': "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                    check_settings:
                      context_extensions:
                        namespace_object: "acl"
                        namespace_service: "api"
                        service_path: "/acl/{objectId}"
              - match:
                  path: "/create"
                route:
                  cluster: "service1"
                typed_per_filter_config:
                  envoy.filters.http.ext_authz:
                    '@type': "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                    check_settings:
                      context_extensions:
                        namespace_object: "contact"
                        namespace_service: "api"
                        service_path: "/create"
                        relation: "owner"
              - match:
                  path: "/delete"
                route:
                  cluster: "service1"
                typed_per_filter_config:
                  envoy.filters.http.ext_authz:
                    '@type': "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                    check_settings:
                      context_extensions:
                        namespace_object: "contact"
                        namespace_service: "api"
                        service_path: "/delete"
                        objectid_ptr: "/id"
                        relation: "owner"
              - match:
                  path: "/read"
                route:
                  cluster: "service1"
                typed_per_filter_config:
                  envoy.filters.http.ext_authz:
                    '@type': "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                    check_settings:
                      context_extensions:
                        namespace_object: "contact"
                        namespace_service: "api"
                        service_path: "/read"
                        objectid_ptr: "/id"
                        relation: "viewer"
              - match:
                  path: "/update"
                route:
                  cluster: "service1"
                typed_per_filter_config:
                  envoy.filters.http.ext_authz:
                    '@type': "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
                    check_settings:
                      context_extensions:
                        namespace_object: "contact"
                        namespace_service: "api"
                        service_path: "/update"
                        objectid_ptr: "/id"
                        relation: "editor"
  clusters:
  - name: "service1"
    connect_timeout: "0.25s"
    type: "strict_dns"
    lb_policy: "round_robin"
    load_assignment:
      cluster_name: "service1"
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "service_host"
                port_value: 8002
  - name: "acl_api"
    connect_timeout: "0.25s"
    type: "strict_dns"
    lb_policy: "round_robin"
    load_assignment:
      cluster_name: "acl_api"
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "authz_host"
                port_value: 8081
  - name: "ext-authz"
    connect_timeout: "1s"
    type: "logical_dns"
    lb_policy: "round_robin"
    load_assignment:
      cluster_name: "ext-authz"
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "authz_host"
                port_value: 8080
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: "0.0.0.0"
      port_value: 8001
layered_runtime:
  layers:
  - name: "static_layer_0"
    static_layer:
      envoy:
        resource_limits:
          listener:
            example_listener_name:
              connection_limit: 10000
