kram-authz.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authz
  labels:
    app: authz
spec:
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
    - name: http
      port: 8081
      targetPort: 8081
  selector:
    app: authz
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authz
spec:
  selector:
    matchLabels:
      app: authz
  replicas: 1
  template:
    metadata:
      labels:
        app: authz
    spec:
      containers:
        - name: authz
          image: kettil/kram-auth
          env:
            - name: SPRING_PROFILES_ACTIVE
              value: docker
          ports:
            - containerPort: 8080
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: bitnami/redis
          ports:
            - containerPort: 6379
          env:
            - name: ALLOW_EMPTY_PASSWORD
              value: 'yes'
            - name: redis_DISABLE_COMMANDS
              value: FLUSHDB,FLUSHALL
          volumeMounts:
            - name: redis-data
              mountPath: /bitnami/redis
      volumes:
        - name: redis-data
          emptyDir: { }
